tests/grammar/snapshots/r#mod__grammar__alpha034__add-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"\n        1 +\n        let x = 10\n    \")"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                9..10,
                                            ),
                                        ),
                                        9..10,
                                    ),
                                    (
                                        Error,
                                        21..24,
                                    ),
                                ),
                                9..24,
                            ),
                        ),
                        9..24,
                    ),
                ),
                9..24,
            ),
            (
                Statement(
                    (
                        VariableSet(
                            (
                                "x",
                                25..26,
                            ),
                            (
                                Number(
                                    (
                                        10.0,
                                        29..31,
                                    ),
                                ),
                                29..31,
                            ),
                        ),
                        25..31,
                    ),
                ),
                25..31,
            ),
        ],
    ),
    [
        Simple {
            span: 21..24,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "true",
                    ),
                ),
                Some(
                    Token(
                        "\"",
                    ),
                ),
                Some(
                    Token(
                        "not",
                    ),
                ),
                Some(
                    Token(
                        "(",
                    ),
                ),
                Some(
                    Token(
                        "false",
                    ),
                ),
                Some(
                    Token(
                        "nameof",
                    ),
                ),
                Some(
                    Token(
                        "[",
                    ),
                ),
                Some(
                    Token(
                        "status",
                    ),
                ),
                Some(
                    Token(
                        "$",
                    ),
                ),
                Some(
                    Token(
                        "-",
                    ),
                ),
                Some(
                    Token(
                        "null",
                    ),
                ),
            },
            found: Some(
                Token(
                    "let",
                ),
            ),
            label: Some(
                "expression",
            ),
        },
    ],
)
