tests/grammar/snapshots/r#mod__grammar__alpha034__add_and_subtract-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 - 2 + 3\").unwrap()"
---
Statement(
    [
        Expression(
            Add(
                Subtract(
                    Number(
                        1.0,
                    ),
                    Number(
                        2.0,
                    ),
                ),
                Number(
                    3.0,
                ),
            ),
        ),
    ],
)
