tests/grammar/snapshots/r#mod__grammar__alpha034__and-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"true and false and true\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        And(
                            (
                                And(
                                    (
                                        Boolean(
                                            (
                                                true,
                                                0..4,
                                            ),
                                        ),
                                        0..4,
                                    ),
                                    (
                                        Boolean(
                                            (
                                                false,
                                                9..14,
                                            ),
                                        ),
                                        9..14,
                                    ),
                                ),
                                0..14,
                            ),
                            (
                                Boolean(
                                    (
                                        true,
                                        19..23,
                                    ),
                                ),
                                19..23,
                            ),
                        ),
                        0..23,
                    ),
                ),
                0..23,
            ),
        ],
    ),
    0..23,
)
