tests/grammar/snapshots/r#mod__grammar__alpha034__and.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"true and false\").unwrap()"
---
Statement(
    [
        Expression(
            And(
                Boolean(
                    true,
                ),
                Boolean(
                    false,
                ),
            ),
        ),
    ],
)
