tests/grammar/snapshots/r#mod__grammar__alpha034__array-11.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"[1, 2 3] 4\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Number(
                                                (
                                                    1.0,
                                                    1..2,
                                                ),
                                            ),
                                            1..2,
                                        ),
                                        (
                                            Number(
                                                (
                                                    2.0,
                                                    4..5,
                                                ),
                                            ),
                                            4..5,
                                        ),
                                        (
                                            Number(
                                                (
                                                    3.0,
                                                    6..7,
                                                ),
                                            ),
                                            6..7,
                                        ),
                                    ],
                                ),
                                0..8,
                            ),
                        ),
                        0..8,
                    ),
                ),
                0..8,
            ),
            (
                Statement(
                    (
                        Expression(
                            (
                                Number(
                                    (
                                        4.0,
                                        9..10,
                                    ),
                                ),
                                9..10,
                            ),
                        ),
                        9..10,
                    ),
                ),
                9..10,
            ),
        ],
    ),
    [
        found "3" at 6..7 expected '"."', '";"', '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', or '","',
    ],
)
