tests/grammar/snapshots/r#mod__grammar__alpha034__array-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"[1]\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Array(
                            [
                                (
                                    Number(
                                        (
                                            1.0,
                                            1..2,
                                        ),
                                    ),
                                    1..2,
                                ),
                            ],
                        ),
                        0..3,
                    ),
                ),
                0..3,
            ),
        ],
    ),
    0..3,
)
